--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="row">
                             <div class="home-info padd-15">
                                 <h3 class="hello">Hello, my name is <span class="name">Chinedu Emmanuel</span></h3>
-                                <h3 class="my-profession">I' m a <span class="typing">web designer</span></h3>
+                                <h3 class="my-profession"><span class="typing">web designer</span></h3>
                                 <p>I'm a Website Designer with extensive expertise for over 2 years. My expertise is to create and design website, graphics design and many more...</p>
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWKJjonk30Zecq3kM22BH8Yd9RA_g0e4skU4h21d0blAVLqg/viewform?usp=pp_url&entry.1568064994=I+need+a+website" class="btn hire-me">Hire Me</a>
                             </div>
