--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                     <div class="skills padd-15">
                                         <div class="row">
                                             <div class="skill-item padd-15">
-                                                <h5>JS</h5>
+                                                <h5>PHP</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width: 86%;"></div>
                                                     <div class="skill-percent">86%</div>
@@ -137,7 +137,7 @@
                                                 </div>
                                             </div>
                                             <div class="skill-item padd-15">
-                                                <h5>Bootstrap</h5>
+                                                <h5>Bootstrap5</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width: 76%;"></div>
                                                     <div class="skill-percent">76%</div>
@@ -234,16 +234,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <!-- ==== Service item start ==== -->
-                                    <div class="service-item padd-15">
-                                        <div class="service-item-inner">
-                                            <div class="icon">
-                                                <i class="fa fa-mobile-alt"></i>
-                                            </div>
-                                            <h4>Graphics Design</h4>
-                                            <p>Logo design, Flyers, Book Cover, Handbill....
-                                            </p>
-                                        </div>
+                                 
                                     </div>
                                     <!-- ==== Service item start ==== -->
                                     <div class="service-item padd-15">
@@ -252,7 +243,7 @@
                                                 <i class="fa fa-code"></i>
                                             </div>
                                             <h4>Programmig</h4>
-                                            <p>HTML, CSS, JavaScript, <br>Bootstrap.  
+                                            <p>HTML, CSS, PHP, <br>Bootstrap.  
                                             </p>
                                         </div>
                                     </div>
@@ -262,8 +253,9 @@
                                             <div class="icon">
                                                 <i class="fa fa-palette"></i>
                                             </div>
-                                            <h4>Re-design Website</h4>
-                                            <p>Landing page, Portfolio, Responsive Websites. 
+                                            <h4>Tutorial</h4>
+                                            <p>We teach you how to build your own website from scratch.
+HTML,CSS, PHP, Bootstrap5.
                                             </p>
                                         </div>
                                     </div>
@@ -274,7 +266,7 @@
                                                 <i class="fa fa-laptop-code"></i>
                                             </div>
                                             <h4>Web Dvelopment</h4>
-                                            <p>Landing page, Portfolio, Responsive Websites.
+                                            <p>Landing page, Realestate, E-commerce, Crypto currency, Investment.
                                             </p>
                                         </div>
                                     </div>
@@ -295,8 +287,8 @@
                                             <div class="icon">
                                                 <i class="fa fa-bullhorn"></i>
                                             </div>
-                                            <h4>Business Promotion</h4>
-                                            <p>Branding, <br>Ads promotion.
+                                            <h4>Project inspired</h4>
+                                            <p>Do you have a project? We inspire and help you build your own project.
                                             </p>
                                         </div>
                                     </div>
@@ -413,7 +405,7 @@
                                         <div class="contact-info-item padd-15">
                                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                                             <h4>website</h4>
-                                            <p>www.domain.com</p>
+                                            <p>https://nueledu.github.io/Myportfolio/</p>
                                         </div>
                                         <!-- ==== Contact info item end ==== -->
                                     </div>
