--- a/index.html
+++ b/index.html
@@ -192,28 +192,28 @@
                                                         <div class="timeline-item">
                                                             <div class="circle-dot"></div>
                                                             <h3 class="timeline-date">
-                                                                <i class="fa fa-calendar"> 2013 - 2015</i>
+                                                                <i class="fa fa-calendar"> 2018 - 2022</i>
                                                             </h3>
-                                                            <h4 class="timeline-title">Student in AG Science</h4>
-                                                            <p class="timeline-text">Studying Agricultural Science in the University of Nigeria Nsukka , BSC(Bachalor of Science).</p>
+                                                            <h4 class="timeline-title">HTML5/CSS</h4>
+                                                            <p Started building my own project with HTML and CSS.</p>
                                                         </div>
                                                         <!-- ==== timeline item ==== -->
                                                         <div class="timeline-item">
                                                             <div class="circle-dot"></div>
                                                             <h3 class="timeline-date">
-                                                                <i class="fa fa-calendar"> 2013 - 2015</i>
+                                                                <i class="fa fa-calendar"> 2022 - 2024</i>
                                                             </h3>
-                                                            <h4 class="timeline-title">Student in AG Science</h4>
-                                                            <p class="timeline-text">Studying Agricultural Science in the University of Nigeria Nsukka , BSC(Bachalor of Science).</p>
+                                                            <h4 class="timeline-title">E-commerce</h4>
+                                                            <p class="timeline-text"> Ellagram makeover and shopping website.</p>
                                                         </div>
                                                         <!-- ==== timeline item ==== -->
                                                         <div class="timeline-item">
                                                             <div class="circle-dot"></div>
                                                             <h3 class="timeline-date">
-                                                                <i class="fa fa-calendar"> 2013 - 2015</i>
+                                                                <i class="fa fa-calendar"> 2024 - 2025</i>
                                                             </h3>
-                                                            <h4 class="timeline-title">Student in AG Science</h4>
-                                                            <p class="timeline-text">Studying Agricultural Science in the University of Nigeria Nsukka , BSC(Bachalor of Science).</p>
+                                                            <h4 class="timeline-title">Crypto Currency</h4>
+                                                            <p class="timeline-text">Landing page for Crypto currency and Investment.</p>
                                                         </div>
                                                     </div>
                                                 </div>
