--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                                                 <i class="fa fa-calendar"> 2018 - 2022</i>
                                                             </h3>
                                                             <h4 class="timeline-title">HTML5/CSS</h4>
-                                                            <p Started building my own project with HTML and CSS.</p>
+                                                            <p> Started building my own project with HTML and CSS.</p>
                                                         </div>
                                                         <!-- ==== timeline item ==== -->
                                                         <div class="timeline-item">
@@ -203,7 +203,7 @@
                                                             <h3 class="timeline-date">
                                                                 <i class="fa fa-calendar"> 2022 - 2024</i>
                                                             </h3>
-                                                            <h4 class="timeline-title">E-commerce</h4>
+                                                            <h4 class="timeline-title">Ellagram E-commerce website</h4>
                                                             <p class="timeline-text"> Ellagram makeover and shopping website.</p>
                                                         </div>
                                                         <!-- ==== timeline item ==== -->
