--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ HTML,CSS, PHP, Bootstrap5.
                                         <div class="contact-info-item padd-15">
                                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                                             <h4>website</h4>
-                                            <p>https://nueledu.github.io/Myportfolio/</p>
+                                            <p><a href="https://nueledu.github.io/Myportfolio/"</a></p>
                                         </div>
                                         <!-- ==== Contact info item end ==== -->
                                     </div>
